--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check --watch",
-    "test": "tape -r ts-node/register/transpile-only test/**/*.test.ts|tap-mocha-reporter tap",
+    "test": "tape -r ts-node/register/transpile-only test/src/**/*.test.ts test/src/*.test.ts|tap-mocha-reporter tap",
     "coverage": "nyc tape -r ts-node/register/transpile-only test/**/*.test.ts",
     "build": "npm run build:types && npm run build:js",
     "build:types": "tsc --emitDeclarationOnly",
