--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check --watch",
     "test": "tape -r ts-node/register/transpile-only test/src/**/*.test.ts test/src/*.test.ts|tap-mocha-reporter tap",
+    "test:watch": "node watch.js",
     "coverage": "nyc tape -r ts-node/register/transpile-only test/**/*.test.ts",
     "build": "npm run build:types && npm run build:js",
     "build:types": "tsc --emitDeclarationOnly",
@@ -24,6 +25,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@types/tape": "^4.13.2",
+    "md5": "^2.3.0",
     "nyc": "^15.1.0",
     "tap-mocha-reporter": "^5.0.3",
     "tape": "^5.6.1",
