test: refactors tests to iteratively test for multiple inputs with multiple expected values
refs #1

--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
   "name": "michr-form-validation-lib",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "version": "1.0.0",
   "description": "Library to help with html form validation.",
   "scripts": {
+    "commit": "npx cz",
+    "commitlint:last": "npx commitlint --from HEAD~1 --to HEAD --verbose",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check --watch",
-    "test": "tape -r ts-node/register/transpile-only test/src/**/*.test.ts test/src/*.test.ts|tap-mocha-reporter tap",
+    "clean": "npx shx rm -rf coverage .nyc_output build dist",
+    "eslint": "npx eslint \"main/**/*\"",
+    "pretest": "npm run clean",
+    "test": "tape -r ts-node/register/transpile-only test/src/**/*.test.ts test/src/*.test.ts|colortape|tap-mocha-reporter tap",
     "test:watch": "node watch.js",
-    "coverage": "nyc tape -r ts-node/register/transpile-only test/**/*.test.ts",
+    "coverage": "nyc tape -r ts-node/register/transpile-only test/src/**/*.test.ts test/src/*.test.ts",
+    "prebuild": "npm run prettier && npm run eslint && npm run clean",
     "build": "npm run build:types && npm run build:js",
-    "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline"
+    "build:types": "tsc",
+    "build:js": "babel main/src --out-file dist/index.js --extensions \".ts,.tsx\" --source-maps inline",
+    "prepare": "husky install",
+    "prettier": "npx prettier --write \"./main/**/*.{ts,tsx}\" \"./test/**/*.{ts,tsx}\""
   },
   "author": {
     "name": "MICHR",
@@ -19,14 +29,28 @@
   "license": "MIT",
   "keywords": [],
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
     "@babel/core": "^7.20.2",
+    "@babel/eslint-plugin": "^7.19.1",
     "@babel/node": "^7.20.2",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
+    "@commitlint/config-conventional": "^17.2.0",
     "@types/tape": "^4.13.2",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "colortape": "^0.1.2",
+    "commitizen": "^4.2.5",
+    "commitlint": "^17.2.0",
+    "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.2",
     "md5": "^2.3.0",
     "nyc": "^15.1.0",
+    "prettier": "^2.7.1",
+    "shx": "^0.3.4",
     "tap-mocha-reporter": "^5.0.3",
     "tape": "^5.6.1",
     "ts-node": "^10.9.1",
