--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "michr-form-validation-lib",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "version": "1.0.0",
   "description": "Library to help with html form validation.",
   "scripts": {
@@ -43,6 +42,7 @@
     "colortape": "^0.1.2",
     "commitizen": "^4.2.5",
     "commitlint": "^17.2.0",
+    "cz-git": "^1.3.12",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
