feat(rule-validations,value-validations): changes validation to distinguish between failed and succeeded rules
ValidationState reports the list of failed and succeeded rules separately which enables Validation
to take action on failed rules allowing error messages to be selected. That can be done through
reduceFail method of Validation.

refs #1

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -12,9 +12,10 @@
     "dist",
     "node-modules"
   ],
+  "report-dir": "./test-results/coverage",
   "reporter": [
     "text",
-    "lcov"
+    "html"
   ],
   "cache": false
 }
