--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "michr-form-validation-lib",
+  "name": "@umich-michr/validation-functions",
   "main": "dist/index.js",
   "version": "1.0.0",
   "description": "Library to help with html form validation.",
@@ -8,16 +8,17 @@
     "commitlint:last": "npx commitlint --from HEAD~1 --to HEAD --verbose",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check --watch",
-    "clean": "npx shx rm -rf coverage .nyc_output build dist",
+    "clean": "npx shx rm -rf test-results .nyc_output build dist *validation-functions*.tgz",
     "eslint": "npx eslint \"main/**/*\"",
-    "pretest": "npm run clean",
     "test": "tape -r ts-node/register/transpile-only test/src/**/*.test.ts test/src/*.test.ts|colortape|tap-mocha-reporter tap",
+    "test:junit": "tape -r ts-node/register/transpile-only test/src/**/*.test.ts test/src/*.test.ts | tap-junit --output test-results/test",
     "test:watch": "node watch.js",
     "coverage": "nyc tape -r ts-node/register/transpile-only test/src/**/*.test.ts test/src/*.test.ts",
     "prebuild": "npm run prettier && npm run eslint && npm run clean",
     "build": "npm run build:types && npm run build:js",
-    "build:types": "tsc",
-    "build:js": "babel main/src --out-file dist/index.js --extensions \".ts,.tsx\" --source-maps inline",
+    "build:types": "npx tsc",
+    "build:js": "npx babel main/src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline",
+    "package": "npm run build && npm pack",
     "prepare": "husky install",
     "prettier": "npx prettier --write \"./main/**/*.{ts,tsx}\" \"./test/**/*.{ts,tsx}\""
   },
@@ -51,6 +52,7 @@
     "nyc": "^15.1.0",
     "prettier": "^2.7.1",
     "shx": "^0.3.4",
+    "tap-junit": "^5.0.2",
     "tap-mocha-reporter": "^5.0.3",
     "tape": "^5.6.1",
     "ts-node": "^10.9.1",
