--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ coverage
 # nyc test coverage
 .nyc_output
 
+test-results
+
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
