refactor(rule-validations,value-validations,error-messages,unitTest): fixes typescript compilation errors for both test and source files
closes #3

--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "commitlint:last": "npx commitlint --from HEAD~1 --to HEAD --verbose",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check --watch",
+    "type-check:test": "tsc --noEmit --esModuleInterop --target es6 --moduleResolution node test/**/*.ts",
     "clean": "npx shx rm -rf test-results .nyc_output build dist *validation-functions*.tgz",
     "eslint": "npx eslint \"main/**/*\"",
     "test": "tape -r ts-node/register/transpile-only test/src/**/*.test.ts test/src/*.test.ts|colortape|tap-mocha-reporter tap",
     "test:junit": "tape -r ts-node/register/transpile-only test/src/**/*.test.ts test/src/*.test.ts | tap-junit --output test-results/test",
     "test:watch": "node watch.js",
     "coverage": "nyc tape -r ts-node/register/transpile-only test/src/**/*.test.ts test/src/*.test.ts",
-    "prebuild": "npm run prettier && npm run eslint && npm run clean",
+    "prebuild": "npm run prettier && npm run eslint && npm run clean && npm run type-check:test",
     "build": "npm run build:types && npm run build:js",
     "build:types": "npx tsc",
     "build:js": "npx babel main/src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline",
